vlib/v/checker/tests/struct_option_field_assign_ptr_err.vv
struct Abc {
	name ?string
	age  ?int
}

fn main() {
	age := 34
	name := 'Bilbo'
	a := Abc{
		age: &age
	}
	b := Abc{
		name: &name
	}
	dump(a)
	dump(b)
}
